added google font to article card css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -103,6 +103,7 @@ button[name="economic-development"] {
 }
 
 .card-container {
+  font-family: 'Montserrat', sans-serif;
   width:100%;
   background-color: #6c7b95;
   padding: 0.5%;
